Removed excess space below book recs on mobile. Removed email annotation from login form. Fixed header hamburger colors. Styled login form.

--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -158,7 +158,7 @@ p {
 
 .container-fluid {
     padding: 45px !important;
-    min-height: calc(100vh - 40px);
+    min-height: calc(100vh - 145px);
 }
 
 .mid-page {
@@ -216,6 +216,14 @@ p {
 	background-color: #3E474F !important;
 	color: white;
 	transition: .2s ease-in-out;
+}
+
+.navbar span {
+	background-color: #b2bbbd;
+}
+
+.navbar button {
+	border-color: #b2bbbd;
 }
   
 /* Footer:  */
@@ -294,6 +302,11 @@ footer a:hover {
     margin: 0 27%;
     box-shadow: 0 2px 5px black;
     padding: 50px;
+}
+
+.book-recommendations .mid-page,
+. {
+	margin-top: 15%;
 }
 
 .modal-body p {
@@ -478,6 +491,7 @@ footer a:hover {
 	}
 	.container-fluid {
 		padding: 0px !important;
+		min-height: 0;
 	}
 	footer a {
 		display: inline-block;
